# miniml_compiler

./: README.md  dune-project  miniml_compiler.opam
lib/: any.c  any.h  main-c.c
src/: arm_noreg.ml  arm_reg.ml  arm_simulator.ml  arm_spec.ml  cfg.ml  clang.ml  closure.ml  dfa.ml  dune  eval.ml  flat.ml  graph.ml  graph.mli  interpreter.ml  lexer.mll  live.ml  main.ml  myMap.ml  mySet.ml  mySet.mli  normal.ml  opt.ml  parser.mly  rca.ml  rda.ml  reg.ml  syntax.ml  typing.ml  vm.ml  vm_simulator.ml
